# cpw-starfly-desktop

./: CMakeLists.txt  Config.h.in
include/: cpw_notifications.h
src/: CMakeLists.txt  cpw_notifications.cc
tests/: CMakeLists.txt  test_gen.cc
